--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/_OLC1__Proyecto1
 endorsed.classpath=
 excludes=
+file.reference.gson-2.10.jar=C:\\Users\\ruben\\Desktop\\Compi 1\\Lab Compi 1\\Librerias\\gson-2.10.jar
 file.reference.java-cup-11b.jar=C:\\Users\\ruben\\Desktop\\Compi 1\\Lab Compi 1\\Librerias\\java-cup-11b.jar
 file.reference.jflex-full-1.9.0.jar=C:\\Users\\ruben\\Desktop\\Compi 1\\Lab Compi 1\\Librerias\\jflex-full-1.9.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.java-cup-11b.jar}:\
-    ${file.reference.jflex-full-1.9.0.jar}
+    ${file.reference.jflex-full-1.9.0.jar}:\
+    ${file.reference.gson-2.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
