--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-/dist/
+/dist/ARBOLES_202111835/
+/dist/SIGUIENTES_202111835/
+/dist/TRANSICIONES_202111835/
+/dist/ERRORES_202111835/
+/dist/AFD_202111835/
+/dist/AFND_202111835/
+/dist/SALIDAS_202111835/
+/dist/textosDot/
 /ARBOLES_202111835/
 /SIGUIENTES_202111835/
 /TRANSICIONES_202111835/
